Update deno to 2.3.5

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,8 +18,7 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"justjavac.vscode-deno-extensionpack",
-				"phind.phind"
+				"justjavac.vscode-deno-extensionpack"
 			]
 		}
 	}
